# web

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  base.env  compose.prod.yml  compose.yml
.husky/: pre-commit
api/: .dockerignore  .gitignore  Dockerfile  app.py  cron.py  job.py  pyproject.toml  requirements.txt
api/app/: cron.py  main.py
api/app/callbacks/: __init__.py  base.py  bonus.py  dispatcher.py  enqueue.py  queue.py  registry.py
api/app/lib/: __init__.py  docs.py  pay.py  queue.py  reports.py  sockets.py  tg.py
api/app/models/: __init__.py  category.py  comment.py  feedback.py  pay.py  post.py  product.py  socket.py  space.py  system.py  task.py  track.py  user.py
api/app/routes/: __init__.py
api/app/routes/admin/: activity.py  stats.py
api/app/routes/categories/: get.py  rm.py  save.py
api/app/routes/feedback/: __init__.py  get.py  rm.py  save.py
api/app/routes/posts/: get.py  guess.py  reply.py  rm.py  save.py
api/app/routes/products/: get.py  rm.py  save.py
api/app/routes/reviews/: get.py  rm.py  save.py
api/app/routes/spaces/: __init__.py  get.py  rm.py  save.py  utils.py
api/app/routes/tasks/: __init__.py  check.py  defaults.py  get.py  save.py
api/app/routes/users/: auth.py  block.py  connect.py  disconnect.py  frens.py  get.py  recover.py  save.py  social.py  token.py
api/app/services/: access.py  auth.py  cache.py  errors.py  logging.py  monitoring.py  on_startup.py  parameters.py  sentry.py
api/app/tasks/: __init__.py  analytics.py  broker.py  callbacks.py  event_base.py  event_dispatcher.py  event_enqueue.py  event_registry.py  registry.py  scheduler.py  sitemap.py  system.py
api/app/tasks/callbacks/: __init__.py  model_events.py  reset_online_users.py
api/app/tasks/events/: __init__.py  bonus.py
api/app/tasks/jobs/: __init__.py  model_events.py  reset_online_users.py
api/app/verify/: channel.py  invite.py  simple.py
api/callbacks/: __init__.py
api/jobs/: __init__.py  analytics.py  monitoring.py  reset_online_users.py  sitemap.py  update_server_status.py
api/lib/: __init__.py  docs.py  pay.py  queue.py  reports.py  sms.py
api/lib/auth/: __init__.py  tg.py
api/models/: __init__.py  category.py  comment.py  payment.py  post.py  reaction.py  review.py  socket.py  system.py  track.py  user.py
api/routes/: __init__.py
api/routes/account/: app.py  auth.py  bot.py  connect.py  disconnect.py  exit.py  online.py  social.py  token.py
api/routes/categories/: get.py  rm.py  save.py
api/routes/payments/: cancel.py  create.py  yookassa.py
api/routes/posts/: get.py  guess.py  reply.py  rm.py  save.py
api/routes/products/: get.py  save.py
api/routes/reviews/: get.py  rm.py  save.py
api/routes/users/: app.py  block.py  bot.py  exit.py  get.py  online.py  social.py
api/scripts/: create_sheets.py
api/services/: access.py  auth.py  cache.py  errors.py  limiter.py  on_startup.py  parameters.py
api/tasks/: __init__.py  analytics.py  sitemap.py
api/tests/: .dockerignore  .pylintrc  Dockerfile  compose.api.yml  conftest.py  pyproject.toml  requirements.txt
tg/: Dockerfile  app.py  logging.py  main.py  pyproject.toml  requirements.txt  sentry.py
tg/handlers/: main.py  media.py  menu.py  posts.py
tg/lib/: __init__.py  _api.py  _variables.py  queue.py  reports.py  tg.py
tg/messages/: ar.json  en.json  es.json  ru.json  zh.json
tg/middlewares/: check_user.py  get_variables.py  prepare_message.py
(+390 files in other folders)
