[project]
name = "tg"
version = "1.0.0"
requires-python = ">=3.10,<3.15"
dependencies = [
    "libdev==0.100",
    "fastapi==0.126.0",
    "httptools==0.7.1",
    "uvicorn==0.38.0",
    "PyJWT==2.10.1",
    "python-multipart==0.0.21",
    "slowapi==0.1.9",
    "taskiq==0.12.1",
    "taskiq-redis==1.2.1",
    "userhub==0.15",
    "consys==0.44",
    "redis==7.1.0",
    "python-socketio==5.15.1",
    "websockets==15.0.1",
    "prometheus_fastapi_instrumentator==7.1.0",
    "aiogram==3.23.0",
    "tgio==0.17",
    "tgreports==0.19.0",
    "google-auth==2.45.0",
    "pygsheets==2.0.6",
    "pandas==2.3.3",
]

[tool.uv]
dev-dependencies = []
